maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: ';' expected but 'true' found.
		else 	if (estFaceMur)==true)
                                         ^